fix navigation width on mobile screen

--- a/src/blocks/navigation/navigation.scss
+++ b/src/blocks/navigation/navigation.scss
@@ -71,7 +71,7 @@
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 500px) {
   .navigation {
     left: -120%;
     width: 100%;
